--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>
+ *
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
 body {
     font-family:"Open Sans", Arial, sans-serif;
     color:#949494;
